<resources>
    <string name="app_name">NomNomMap</string>
    <string name="meal_title_hint">Enter a title for the meal.</string>
    <string name="meal_title_label">Meal Title</string>
    <string name="meal_time_label">Meal Time</string>
    <string name="meal_date_label">Meal Date</string>
    <string name="new_meal">New Meal</string>
    <string name="menu_map">Map</string>
    <string name="menu_history">History</string>
    <string name="meal_name">Meal Name:</string>
    <string name="calories">Calories:</string>
    <string name="proteins">Proteins:</string>
    <string name="carbs">Carbs:</string>
    <string name="fats">Fats:</string>
    <string name="name">name</string>
    <string name="amount">amount</string>
    <string name="clear_button_txt">Clear All</string>
    <string name="submit_button_txt">Submit</string>
    <string name="log_meal_button_txt">Log Meal</string>
    <string name="picture_prompt">Take a picture of your meal here!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="daily_nutrition"><u>Daily Nutrition</u></string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="max_daily_intake"><u>Max Daily Intake</u></string>
    <string name="profile_info"><u>Profile Information</u></string>
    <string name="profile_name">Name:</string>
    <string name="profile_email">Email:</string>
    <string name="default_profile_info">[profile info goes here]</string>
    <string name="user_name">User Name</string>
    <string name="user_name_edit">User Name:</string>
</resources>
