<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mealMapFragment"
        android:icon="@drawable/ic_menu_map"
        android:title="@string/menu_map"
        app:showAsAction="ifRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <item
        android:id="@+id/mealListFragment"
        android:icon="@drawable/ic_menu_history"
        android:title="@string/menu_history"
        app:showAsAction="ifRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</menu>