<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@+id/editFats"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fatsTextView"
        app:layout_constraintVertical_bias="0.13"
        tools:layout_editor_absoluteX="72dp" />

    <TextView
        android:id="@+id/mealTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="136dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/meal_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/caloriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/calories"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealTextView" />

    <TextView
        android:id="@+id/proteinsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/proteins"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesTextView" />

    <TextView
        android:id="@+id/carbsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/carbs"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proteinsTextView" />

    <TextView
        android:id="@+id/fatsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/fats"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carbsTextView" />

    <EditText
        android:id="@+id/editMealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/mealTextView"
        tools:layout_editor_absoluteY="126dp" />

    <EditText
        android:id="@+id/editCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toEndOf="@+id/caloriesTextView"
        app:layout_constraintTop_toBottomOf="@+id/editMealName" />

    <EditText
        android:id="@+id/editProteins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toEndOf="@+id/proteinsTextView"
        app:layout_constraintTop_toBottomOf="@+id/editCalories" />

    <EditText
        android:id="@+id/editCarbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/carbsTextView"
        app:layout_constraintTop_toBottomOf="@+id/editProteins" />

    <EditText
        android:id="@+id/editFats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toEndOf="@+id/fatsTextView"
        app:layout_constraintTop_toBottomOf="@+id/editCarbs" />

</androidx.constraintlayout.widget.ConstraintLayout>