<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/profile_info"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profileNameTextView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/user_name_edit"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textAlignment="textEnd"/>

                <EditText
                    android:id="@+id/editProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textVisiblePassword|textNoSuggestions"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/max_daily_intake"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/caloriesTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/calories"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="textEnd"/>

            <EditText
                android:id="@+id/editCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/proteinsTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/proteins"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="textEnd"/>

            <EditText
                android:id="@+id/editProteins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/carbsTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/carbs"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="textEnd"/>

            <EditText
                android:id="@+id/editCarbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fatsTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/fats"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="textEnd"/>

            <EditText
                android:id="@+id/editFats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clearButton"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:gravity="center"
                android:backgroundTint="@color/dark_green"
                android:text="@string/clear_button_txt"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:gravity="center"
                android:layout_marginStart="45dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btn_logout"
            android:text="@string/log_out" />
        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</ScrollView>